# TalentScope

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  README.md  app.py  app_streamlit.py  chainlit.md  main.py  nginx.conf  pyproject.toml  requirements.txt  supervisord.conf  test_mcp.py  tmp_ds.json  tmp_raw.json  tmp_schema.json  trace.md
.chainlit/: config.toml
.claude/: settings.json
.github/workflows/: deploy.yml
agents/: __init__.py  __main__.py  config.py  cosmos_client.py  orchestrator.py  report.py  tool_filter.py
agents/plugins/: _resolve.py  _resolve_member.py  clarification_plugin.py  contribution_plugin.py  github_mcp_plugin.py  meeting_plugin.py  member_plugin.py  project_plugin.py  slack_plugin.py  sub_agent_plugin.py  (+2 more)
api/: __init__.py  deps.py  main.py
docs/: agent-architecture-proposal.md  analysys.md  chat-architecture.md  data-schema.md  demo-data.md  filter-fix-report.md  hackathon_guidelines.md  handoff.md  implementation-plan.md  sub-agent-design.md
frontend/: package-lock.json  package.json
ingest/: notion_ingest.py  run_ingest.py  slack_ingest.py
scripts/: debug_notion_db.py  dump_notion_page.py  explore_notion_dbs.py  fetch_pjc_page.py  patch_cosmos_assignments.py  seed_assignments_cost.py  seed_cosmos_slack.py  seed_demo_full.py  seed_llm_agent_test.py  seed_new_members.py  seed_notion_demo.py  seed_notion_tasks.py  seed_pjb_pjc_fix.py  seed_slack_demo.py  seed_slack_demo_v2.py  setup_cosmosdb.py  test_slack_post.py  verify_azure_openai.py  verify_cosmosdb.py  verify_jira.py  verify_notion.py  verify_slack.py
(+83 files in other folders)
