[project]
name = "talentscope"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "notion-client>=3.1.0",
    "python-dotenv>=1.0.0",
    "slack_sdk>=3.0.0",
    "azure-cosmos>=4.7.0",
    "openai>=1.0.0",
    "semantic-kernel>=1.18.0",
    "streamlit>=1.40.0",
    "plotly>=5.0.0",
    "streamlit-calendar>=1.0.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "websockets>=14.0",
]
